[gd_scene load_steps=4 format=2]

[ext_resource path="res://resources/ui_theme.tres" type="Theme" id=2]
[ext_resource path="res://scripts/screens/lobby.gd" type="Script" id=3]
[ext_resource path="res://scenes/screens/lobby/player_slot.tscn" type="PackedScene" id=4]

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 100.0
theme = ExtResource( 2 )
script = ExtResource( 3 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 50.0
margin_right = -50.0
margin_bottom = -50.0

[node name="PlayerListCont" type="VBoxContainer" parent="Control"]
anchor_right = 0.6
anchor_bottom = 0.8

[node name="PlayerSlot1" parent="Control/PlayerListCont" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 900.0
margin_bottom = 134.0

[node name="PlayerSlot2" parent="Control/PlayerListCont" instance=ExtResource( 4 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 138.0
margin_right = 900.0
margin_bottom = 272.0

[node name="PlayerSlot3" parent="Control/PlayerListCont" instance=ExtResource( 4 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 276.0
margin_right = 900.0
margin_bottom = 410.0

[node name="PlayerSlot4" parent="Control/PlayerListCont" instance=ExtResource( 4 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 414.0
margin_right = 900.0
margin_bottom = 548.0

[node name="CharacterEquipmentCont" type="VBoxContainer" parent="Control"]
anchor_left = 0.6
anchor_right = 1.0
anchor_bottom = 0.8
alignment = 2

[node name="MarginContainer" type="MarginContainer" parent="Control"]
anchor_top = 0.85
anchor_right = 0.6
anchor_bottom = 1.0
custom_constants/margin_right = 40
custom_constants/margin_left = 40

[node name="PartySizeControl" type="HBoxContainer" parent="Control/MarginContainer"]
margin_left = 40.0
margin_right = 860.0
margin_bottom = 105.0

[node name="SubButton" type="Button" parent="Control/MarginContainer/PartySizeControl"]
margin_right = 146.0
margin_bottom = 105.0
text = "-"

[node name="Status" type="Label" parent="Control/MarginContainer/PartySizeControl"]
margin_left = 150.0
margin_top = 28.0
margin_right = 667.0
margin_bottom = 76.0
size_flags_horizontal = 3
text = "Party size: 1"
align = 1
valign = 1

[node name="AddButton" type="Button" parent="Control/MarginContainer/PartySizeControl"]
margin_left = 671.0
margin_right = 820.0
margin_bottom = 105.0
text = "+"

[node name="ButtonContainer" type="HBoxContainer" parent="Control"]
anchor_left = 0.6
anchor_top = 0.85
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MatchmakingButton" type="Button" parent="Control/ButtonContainer"]
visible = false
margin_right = 308.0
margin_bottom = 105.0
size_flags_horizontal = 3
text = "Find Game"

[node name="ReadyButton" type="Button" parent="Control/ButtonContainer"]
visible = false
margin_right = 599.0
margin_bottom = 105.0
size_flags_horizontal = 3
toggle_mode = true
text = "Ready"

[node name="PlayButton" type="Button" parent="Control/ButtonContainer"]
margin_right = 599.0
margin_bottom = 105.0
size_flags_horizontal = 3
text = "Play"

[connection signal="pressed" from="Control/MarginContainer/PartySizeControl/SubButton" to="." method="_on_SubButton_pressed"]
[connection signal="pressed" from="Control/MarginContainer/PartySizeControl/AddButton" to="." method="_on_AddButton_pressed"]
[connection signal="pressed" from="Control/ButtonContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
